@@ -14,6 +14,8 @@ New features:
 Changes:
 
 - branding has been updated to reflect new project name and goals
+- custom directories and ssh keys are removed (may be temporary)
+- server installation makes copy of sshync.py in home directory
 
 Planned for next update (The Fluffy Update):
 
